--- a/_posts/2016-08-30-test-post.md
+++ b/_posts/2016-08-30-test-post.md
@@ -2,6 +2,7 @@
 layout: post
 title: "test post"
 date: 2016-08-30
+image: "https://i.ytimg.com/vi/AUUVfPy0UgI/maxresdefault.jpg"
 ---
 
 Hello, this is a test post.
