added categories to post and page to filter the categories

--- a/_posts/2016-08-30-test-post.md
+++ b/_posts/2016-08-30-test-post.md
@@ -3,6 +3,10 @@ layout: post
 title: "test post"
 date: 2016-08-30
 image: "https://i.ytimg.com/vi/AUUVfPy0UgI/maxresdefault.jpg"
+categories:
+  - procedura
+  - chiamata
+  - evento
 ---
 
 Hello, this is a test post.
